fix too long titles in interview.html

--- a/front-end/public/css/styles.css
+++ b/front-end/public/css/styles.css
@@ -28,6 +28,8 @@ h1 {
 	font-weight: 200;
 	letter-spacing: 0.02rem;
 	color: #0B799E;
+	overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 h3 {
